Android: wpa_s: changes to default build config
Enable roaming and bgscan and nl80211

Signed-off-by: Eyal Shapira <eyal@wizery.com>

--- a/wpa_supplicant/android.config
+++ b/wpa_supplicant/android.config
@@ -86,7 +86,7 @@
 #CONFIG_DRIVER_WEXT=y
 
 # Driver interface for Linux drivers using the nl80211 kernel interface
-#CONFIG_DRIVER_NL80211=y
+CONFIG_DRIVER_NL80211=y
 CONFIG_LIBNL20=y
 
 # Driver interface for FreeBSD net80211 layer (e.g., Atheros driver)
@@ -496,7 +496,7 @@ CONFIG_INTERWORKING=y
 CONFIG_HS20=y
 
 # Disable roaming in wpa_supplicant
-CONFIG_NO_ROAMING=y
+#CONFIG_NO_ROAMING=y
 
 # AP mode operations with wpa_supplicant
 # This can be used for controlling AP mode operations with wpa_supplicant. It
@@ -531,3 +531,9 @@ CONFIG_TDLS=y
 #CONFIG_EXT_PASSWORD_TEST=y
 
 include $(wildcard $(LOCAL_PATH)/android_config_*.inc)
+
+# bgscan
+NEED_BGSCAN=y
+CONFIG_BGSCAN_LEARN=y
+CONFIG_BGSCAN_SIMPLE=y
+
