hostapd: add hostapd.conf param to force AP channel sync
When ap_channel_sync=1 the 40Mhz operating channel of an AP will be
set to the channel of an existing AP operating on the same PHY (NIC).

Signed-off-by: Arik Nemtsov <arik@wizery.com>

--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -143,6 +143,13 @@ channel=1
 # Defaults:
 #acs_num_scans=5
 
+# Sync channel to previous operational APs
+# (default: 0)
+# Set to 1 in order to sync the channel of the current AP to the
+# channel of an operational radio on the same PHY. Note that this
+# applies to the 40Mhz operating channel (primary + secondary)
+#ap_channel_sync=0
+
 # Beacon interval in kus (1.024 ms) (default: 100; range 15..65535)
 beacon_int=100
 
