--- a/wpa_supplicant/wpa_supplicant_template.conf
+++ b/wpa_supplicant/wpa_supplicant_template.conf
@@ -9,7 +9,13 @@ manufacturer=TI
 model_name=Wilink
 model_number=wl18xx
 serial_number=12345
-p2p_go_max_inactivity=60
-p2p_go_ht40=1
 disassoc_low_ack=1
 concurrent_sched_scan=1
+config_methods=physical_display virtual_push_button keypad
+
+# for wlan0 only
+p2p_disabled=1
+
+# for P2P only
+#p2p_go_max_inactivity=60
+#p2p_go_ht40=1
